Make slotchange events bubble

The spec is: https://dom.spec.whatwg.org/#notify-mutation-observers ; open this link, and find-in-page by "slotchange".
This CL is a bug fix. The current behavior is unintentional.

BUG=641140

Review-Url: https://codereview.chromium.org/2306873002
Cr-Commit-Position: refs/heads/master@{#416197}

Former-commit-id: db300b7b07375236467cfcc9aad82b8f8affa36b